# torrential

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  Cargo.toml  ISSUE_TEMPLATE.md  README.md  build.rs  cargo-sources.json  com.github.davidmhewitt.torrential.json  com.github.davidmhewitt.torrential.yml  i18n.toml  meson.build  meson_options.txt  tools  transmission-legacy-ssl.patch  uncrustify-vala.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: flatpak-modules.yml  flatpak.yml  main.yml  rust.yml
cmake/: GResource.cmake
data/: com.github.davidmhewitt.torrential.appdata.xml  com.github.davidmhewitt.torrential.appdata.xml.in  com.github.davidmhewitt.torrential.desktop  com.github.davidmhewitt.torrential.desktop.in  com.github.davidmhewitt.torrential.gresource.xml  com.github.davidmhewitt.torrential.gschema.xml  gresource.xml  meson.build  torrential.metainfo.xml.in
data/icons/: meson.build
data/ui/: FileSelectFactory.ui
debian/: changelog  control  copyright
i18n/de/: torrential_relm4.ftl
i18n/en-GB/: torrential_relm4.ftl
libtransmission/: CMakeLists.txt
po/: LINGUAS  POTFILES  az.po  ca.po  ckb.po  com.github.davidmhewitt.torrential.pot  cs.po  da.po  de.po  ee.po  eo.po  es.po  fi.po  fo.po  fr.po  fr_CA.po  he.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  ko.po  lo.po  lt.po  lv.po  meson.build  mr.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  sl.po  sr.po  (+4 more)
po/extra/: POTFILES  de.po  es.po  extra.pot  fr.po  fr_CA.po  id.po  it.po  lt.po  meson.build  nl.po  pt_BR.po  ru.po
src/: Application.vala  MainWindow.vala  PreferencesWindow.vala  Settings.vala  Torrent.vala  TorrentManager.vala  Utils.vala  application.rs  config.rs.in  file_select_dialog.rs  header.rs  magnet_dialog.rs  main.rs  meson.build  preferences_window.rs  toast.rs  torrent.rs  torrential.gresource.xml  transmission.rs  utils.rs  welcome.rs  window.rs
src/Dialogs/: FileSelectDialog.vala
src/FileSelector/: FileSelectDialog.vala  Model.vala
src/Widgets/: FileSelectTreeView.vala  MultiInfoBar.vala  TorrentListBox.vala  TorrentListRow.vala
src/backend/: mod.rs  transmission_connection.rs
src/dialogs/: mod.rs  preferences_dialog.rs
src/widgets/: mod.rs  torrent_list_box.rs
vapi/: transmission-2.0.vapi
