[package]
name = "torrential-relm4"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
granite = { package = "granite-rs", version = "1.4.0", features = ["v7_5", "relm4"] }
log = "0.4"
nix = { version = "0.29.0", features = ["signal"] }
relm4 = "0.9"
relm4-macros = "0.9"
tokio = { version = "1.38", features = ["time"] }
tr = "0.1.10"
tracker = "0.2"
transmission-client = "0.1.5"
url = "2.5.2"
