[package]
name = "torrential-relm4"
version = "0.1.0"
edition = "2021"

[dependencies]
granite = { package = "granite-rs", version = "3.3.0", features = ["v7_5", "relm4"] }
i18n-embed = { version = "0.15.2", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9.2"
lazy_static = "1.5.0"
log = "0.4"
nix = { version = "0.29.0", features = ["signal"] }
gtk4 = { version = "0.11.3", features = ["v4_10"] }
relm4 = "0.11"
relm4-components = "0.11"
relm4-macros = "0.11"
rust-embed = { version = "8", features = ["debug-embed"] }
tokio = { version = "1.38", features = ["time"] }
tracker = "0.2"
transmission-client = "0.1.5"

[build-dependencies]
glib-build-tools = "0.20.0"
