sources = files(
    'Dialogs/FileSelectDialog.vala',
    'Widgets/FileSelectTreeView.vala',
    'Widgets/MultiInfoBar.vala',
    'Widgets/TorrentListBox.vala',
    'Widgets/TorrentListRow.vala',
    'Application.vala',
    'MainWindow.vala',
    'PreferencesWindow.vala',
    'Settings.vala',
    'Torrent.vala',
    'TorrentManager.vala',
)

executable(
    meson.project_name(),
    sources,
    icons_gresource,
    dependencies: dependencies,
    install: true
)

